# demondemoskills2

./: README.md  pyproject.toml
docs/: realsense.md  skills.md  yolo.md
src/di_base_client/: client.py
src/di_core/: __init__.py  api.py  cli.py  config.py  registry.py  results_web.py  runtime.py  server.py  web.py  xml_gateway.py
src/di_skills/: __init__.py  base.py  docgen.py
src/di_skills/skills/: __init__.py  capture_realsense_image.py  detect_screws.py  dismantling_planner.py  locate_screw.py  screw_removal_bt.py  unscrew.py
src/di_skills/templates/python/: skill_template.py
src/tools/: __init__.py  skill_docs.py
tests/: test_capture_dummy.py  test_detect_from_db.py  test_execute_unscrew.py  test_screw_removal_bt.py  test_screw_workflow.py
web/: index.html
