[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "demondemoskills"
version = "0.1.0"
description = "Demo skill execution framework"
authors = [{name = "Demo"}]
requires-python = ">=3.8"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]
