[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimonta-core-mvp"
version = "0.1.0"
description = "di.core MVP with internal skill communication"
authors = [{ name = "di.monta" }]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.6",
  "typer>=0.9",
]

[project.scripts]
dimonta = "di_core.cli:app"
skill-docs = "di_skills.docgen:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["di_core", "di_skills", "di_base_client", "di_skills.skills", "di_skills.templates.python"]
