[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimonta-core"
version = "0.1.0"
description = "di.core MVP with internal skill communication"
authors = [{ name = "di.monta" }]
requires-python = ">=3.10"
dependencies = [
  "pydantic>=1.10,<2",
  "typer>=0.9",
  "fastapi>=0.95,<0.100",
  "uvicorn>=0.23",
  "pyrealsense2",
  "opencv-python",
  "ultralytics",
]

[project.scripts]
dimonta = "di_core.cli:app"
skill-docs = "tools.skill_docs:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["di_core", "di_skills", "di_base_client", "di_skills.skills", "di_skills.templates.python", "tools"]
